# trace_weaver

./: .editorconfig  .gitignore  CLAUDE.md  README.md  SUBLICENSES.md  alembic.ini  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
docs/background/background_claude/: 01_market_landscape_2026.md  02_ai_models_and_tech_stack.md  03_agentic_ai_paradigm.md  04_on_device_and_edge_ai.md  05_ai_apps_case_studies.md  06_user_behavior_and_unmet_needs.md  07_business_models_and_monetization.md  08_dev_tools_and_building_blocks.md  09_regulation_and_safety.md  10_korea_ai_ecosystem.md  README.md
docs/background/background_codex/: 01_market_adoption.md  02_ai_capability_stack.md  03_pc_mobile_on_device_platforms.md  04_data_crawling_knowledge_pipeline.md  05_security_privacy_policy.md  06_source_map.md  README.md
docs/background/background_gemini/: 01_agentic_ai_and_market_trends_2026.md  02_ai_hardware_and_edge_computing_2026.md  03_ai_startup_business_models_2026.md  04_technical_infrastructure_and_slm_2026.md
docs/handoff/: 2026-04-26_session-handoff.md  next_session_prompt.txt
docs/handoff/2026-04-26_session-2/: handoff.md  next_session_prompt.txt
docs/ideation/ideation_claude/: ideation_topics.md
docs/ideation/ideation_codex/: README.md
docs/ideation/ideation_gemini/: 5_ai_app_ideations_2026.md
docs/plan/: 00_overview.md  01_dev_environment.md  02_architecture.md  03_data_storage.md  04_collectors.md  05_browser_extension.md  06_privacy_redaction.md  07_insight_llm.md  08_renderer_outputs.md  09_daemon_api.md  10_observability_diagnostics.md  11_frontend_architecture.md  12_ux_ui_design.md  13_user_scenarios.md  14_cli_packaging.md  15_testing_quality.md  16_roadmap.md  17_risks.md  18_adrs.md
docs/preset/: 00_overview.md  01_system_packages.md  02_intel_drivers.md  03_python_environment.md  04_node_frontend.md  05_llm_models.md  06_systemd_runtime.md  07_test_fixtures.md  08_verification.md  99_user_required_actions.md
docs/simple_plan/: 00_overview.md  01_functional_spec.md  02_dev_environment.md  03_architecture.md  04_privacy_security.md  05_roadmap_and_risks.md  06_pair_review.md
docs/subject/subject_claude/: LOOM_initial_plan.md
docs/subject/subject_codex/: 01_traceforge_linux_dev_context_agent.md
docs/subject/subject_gemini/: 01_linux_dev_activity_ai_tracker.md
docs/work_log/api-routers/: 2026-04-26_status-state-map-alphabet-fix.md  2026-04-26_wire-readonly-routers-to-db.md  2026-04-26_wire-status-router-live.md
docs/work_log/cli/: 2026-04-26_implement-typer-cli-and-shell-hooks.md
docs/work_log/docs-plan/: 2026-04-26_expand-simple-to-detailed.md
docs/work_log/docs-preset/: 2026-04-26_audit-and-apply-preset.md
docs/work_log/meta-config/: 2026-04-26_flip-team-dispatch-default-to-subagent.md  2026-04-26_init-claude-md.md
docs/work_log/orchestration/: 2026-04-26_b0-bootstrap-implementation.md  2026-04-26_subagent-org-limit-recovery.md
docs/work_log/packaging-systemd/: 2026-04-26_b0-6-systemd-unit-and-desktop-entry.md
docs/work_log/store/: 2026-04-26_implement-store-orm-and-alembic.md
docs/work_log/testing/: 2026-04-26_p0-3-pytest-smoke-baseline.md
docs/work_log/typecheck/: 2026-04-26_p0-2-pyright-strict-baseline.md
hooks/: bash.sh  zsh.sh
packaging/desktop/: traceweaver.desktop
packaging/scripts/: install_desktop_entry.sh  install_user_unit.sh  uninstall_user_unit.sh
packaging/systemd/: traceweaver.service
src/traceweaver/: __init__.py  __main__.py
src/traceweaver/api/: deps.py  dto.py  errors.py
src/traceweaver/api/routers/: __init__.py  conventions.py  demo.py  events.py  extension.py  extraction.py  forget.py  mode.py  outputs.py  projects.py  recommendations.py  status.py  ws.py
src/traceweaver/cli/: __init__.py  _client.py  _constants.py  app.py  apply.py  daemon_cmd.py  demo.py  doctor.py  extract.py  forget.py  open_cmd.py  shell.py
src/traceweaver/cli/hook_scripts/: fish.fish
src/traceweaver/collectors/: __init__.py  base.py  constants.py  shell.py
src/traceweaver/core/: __init__.py  config.py  errors.py  logger.py  paths.py
src/traceweaver/daemon/: app.py  auth.py  lifespan.py  systemd.py  ws.py  ws_messages.py
src/traceweaver/demo/: __init__.py  demo_seed.yaml  seed.py
src/traceweaver/store/: __init__.py  audit.py  constants.py  engine.py  models.py  repository.py  retention.py  schemas.py  vector.py
src/traceweaver/store/migrations/: env.py
src/traceweaver/ui_static/: index.html
src/traceweaver/ui_static/assets/: card-SHpF-bED.js  card-SHpF-bED.js.map  diff-CXLWjhRj.js  diff-CXLWjhRj.js.map  domain-DfKXZMZ8.js  domain-DfKXZMZ8.js.map  health-CZ3m6zQO.js  health-CZ3m6zQO.js.map  inbox-CLjAIHya.js  inbox-CLjAIHya.js.map  index-Bn-lPNIf.js  index-Bn-lPNIf.js.map  index-DzysYIpL.css  input-D920JL3P.js  input-D920JL3P.js.map  mode-r6_qdxfK.js  mode-r6_qdxfK.js.map  outputs-DlmVmbBQ.js  outputs-DlmVmbBQ.js.map  privacy-YXkCpGwJ.js  (+9 more)
tests/: test_dto_shapes.py  test_smoke_imports.py
ui/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
ui/src/: main.js  main.tsx  routeTree.gen.ts
ui/src/lib/: api.js  api.ts  utils.js  utils.ts  ws.ts
ui/src/routes/: __root.tsx  diff.tsx  health.tsx  inbox.tsx  mode.tsx  outputs.tsx  privacy.tsx  today.tsx
ui/src/store/: ui.js  ui.ts
ui/src/styles/: globals.css
ui/src/types/: domain.js  domain.ts
(+24 files in other folders)
